@@ -1,3 +1,3 @@
-SUBDIRS = rubyhello qtruby qtrubyapp dcopservice kapp kxt
+SUBDIRS = rubyhello qtruby qtrubyapp dcopservice kapp kxt rails
 profilesdir = $(kde_datadir)/kdevelop/profiles/IDE/ScriptingLanguageIDE/RubyIDE
 profiles_DATA = ruby.appwizard
