@@ -1,0 +1,20 @@
+
+
+#original Makefile.am contents follow:
+
+#dataFiles = app.rb app.kdevelop
+#templateName= rubyhello
+#
+#### no need to change below:
+#template_DATA = $(templateName).kdevtemplate
+#templatedir = ${appwizarddatadir}/templates
+#
+#appwizarddatadir = ${kde_datadir}/kdevappwizard
+#$(templateName).tar.gz:
+#	$(TAR) -cf $(templateName).tar -C $(srcdir) ${dataFiles}
+#	$(GZIP) -9 $(templateName).tar
+#
+#archivedir = ${appwizarddatadir}
+#archive_DATA = $(templateName).tar.gz ${templateName}.png
+#
+#CLEANFILES = *.tar.gz
