@@ -1,0 +1,44 @@
+# Makefile.in generated by unsermake
+####################################
+
+top_builddir = ../../../..
+top_srcdir = ../../../..
+srcdir = .
+.FORWARDS: all install install-data install-exec clean check force-reedit
+
+all:
+	@echo 'WARNING: use unsermake instead of make or use a wrapper script, e.g. makeobj!!!'
+	/home/duke/src/kde/kde/trunk/kdenonbeta/unsermake/unsermake all
+
+install:
+	@echo 'WARNING: use unsermake instead of make or use a wrapper script, e.g. makeobj!!!'
+	/home/duke/src/kde/kde/trunk/kdenonbeta/unsermake/unsermake install
+
+install-data:
+	@echo 'WARNING: use unsermake instead of make or use a wrapper script, e.g. makeobj!!!'
+	/home/duke/src/kde/kde/trunk/kdenonbeta/unsermake/unsermake install-data
+
+install-exec:
+	@echo 'WARNING: use unsermake instead of make or use a wrapper script, e.g. makeobj!!!'
+	/home/duke/src/kde/kde/trunk/kdenonbeta/unsermake/unsermake install-exec
+
+clean:
+	@echo 'WARNING: use unsermake instead of make or use a wrapper script, e.g. makeobj!!!'
+	/home/duke/src/kde/kde/trunk/kdenonbeta/unsermake/unsermake clean
+
+check:
+	@echo 'WARNING: use unsermake instead of make or use a wrapper script, e.g. makeobj!!!'
+	/home/duke/src/kde/kde/trunk/kdenonbeta/unsermake/unsermake check
+
+force-reedit:
+	@echo 'WARNING: use unsermake instead of make or use a wrapper script, e.g. makeobj!!!'
+	/home/duke/src/kde/kde/trunk/kdenonbeta/unsermake/unsermake force-reedit
+
+$(top_builddir)/languages/ruby/app_templates/rails/Makefile: $(top_builddir)/config.status $(top_srcdir)/languages/ruby/app_templates/rails/Makefile.in
+	cd $(top_builddir) && $(SHELL) ./config.status languages/ruby/app_templates/rails/Makefile
+
+all: $(top_builddir)/languages/ruby/app_templates/rails/Makefile
+final: 
+	@echo no programs available to recreate as final. Call in subdirs
+
+.PHONY: all final
