@@ -1,0 +1,16 @@
+dataFiles = app.kdevelop
+templateName= rails
+
+### no need to change below:
+template_DATA = $(templateName).kdevtemplate
+templatedir = ${appwizarddatadir}/templates
+
+appwizarddatadir = ${kde_datadir}/kdevappwizard
+$(templateName).tar.gz: ${dataFiles}
+	$(TAR) -cf $(templateName).tar -C $(srcdir) ${dataFiles}
+	$(GZIP) -f9 $(templateName).tar
+
+archivedir = ${appwizarddatadir}
+archive_DATA = $(templateName).tar.gz ${templateName}.png
+
+CLEANFILES = *.tar.gz
