@@ -1,0 +1,91 @@
+<?xml version="1.0"?>
+<kdevelop>
+ <general>
+  <author>%{AUTHOR}</author>
+  <email>%{EMAIL}</email>
+  <version>%{VERSION}</version>
+  <projectmanagement>KDevScriptProject</projectmanagement>
+  <primarylanguage>Ruby</primarylanguage>
+  <keywords>
+		<keyword>Ruby</keyword>
+  </keywords>
+  <ignoreparts>
+   <part>KDevDoxygen</part>
+   <part>KDevdistpart</part>
+   <part>KDevVisualBoyAdvance</part>
+   <part>KDevDebugger</part>
+  </ignoreparts>
+ </general>
+ <kdevscriptproject>
+  <general>
+		<includepatterns>*.rb</includepatterns>
+		<excludepatterns>*~</excludepatterns>
+  </general>
+ </kdevscriptproject>
+ <kdevfileview>
+	 <groups>
+	   <group pattern="*.rb" name="Scripts" />
+	 </groups>
+ </kdevfileview>											 
+ <kdevdoctreeview>
+    <ignoretocs>
+      <toc>ada</toc>
+      <toc>ada_bugs_gcc</toc>
+      <toc>bash</toc>
+      <toc>bash_bugs</toc>
+      <toc>c++_bugs_gcc</toc>
+      <toc>clanlib</toc>
+      <toc>w3c-dom-level2-html</toc>
+      <toc>fortran_bugs_gcc</toc>
+      <toc>gnome1</toc>
+      <toc>gnustep</toc>
+      <toc>gtk</toc>
+      <toc>gtk_bugs</toc>
+      <toc>haskell</toc>
+      <toc>haskell_bugs_ghc</toc>
+      <toc>java_bugs_gcc</toc>
+      <toc>java_bugs_sun</toc>
+      <toc>kde2book</toc>
+      <toc>libc</toc>
+      <toc>libstdc++</toc>
+      <toc>opengl</toc>
+      <toc>pascal_bugs_fp</toc>
+      <toc>php</toc>
+      <toc>php_bugs</toc>
+      <toc>perl</toc>
+      <toc>perl_bugs</toc>
+      <toc>python</toc>
+      <toc>python_bugs</toc>
+      <toc>qt-kdev3</toc>
+      <toc>sdl</toc>
+      <toc>stl</toc>
+      <toc>w3c-svg</toc>
+      <toc>sw</toc>
+      <toc>w3c-uaag10</toc>
+      <toc>wxwidgets_bugs</toc>
+    </ignoretocs>
+    <ignoreqt_xml>
+      <toc>Guide to the Qt Translation Tools</toc>
+      <toc>Qt Assistant Manual</toc>
+      <toc>Qt Designer Manual</toc>
+      <toc>Qt Reference Documentation</toc>
+      <toc>qmake User Guide</toc>
+    </ignoreqt_xml>
+    <ignoredoxygen>
+      <toc>KDE Libraries (Doxygen)</toc>
+    </ignoredoxygen>
+ </kdevdoctreeview>
+  <kdevfilecreate>
+    <useglobaltypes>
+			<type ext="rb"/>
+    </useglobaltypes>
+  </kdevfilecreate>
+	<kdevrubysupport>
+		<run>
+			<interpreter>ruby</interpreter>
+			<shell>%{dest}/script/console</shell>
+			<terminal>false</terminal>
+			<mainprogram>script/server</mainprogram>
+		</run>
+	</kdevrubysupport>
+</kdevelop>
