@@ -1,0 +1,7 @@
+# KDE Config File
+[General]
+Name=Ruby On Rails
+Category=Ruby
+Comment=This generates a Rails project in Ruby
+FileTemplates=rb,ShellStyle
+ShowFilesAfterGeneration=script/server
