@@ -1,3 +1,9 @@
+2006-01-19  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>
+* Added a Rails project template
+* Use the Run menu option to start WEBrick. If the Rails project doesn't
+  exist it will be created.
+* The script/console runs in the Terminal instead of irb
+
 2006-01-16  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>
 * Added .ocl extension for Onboard Control Language sources used for
   C files in some satellites
